--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../style/style.css">
+        <link rel="stylesheet" href="./style/global.css">
+        <link rel="stylesheet" href="./style/header.css">
+        <link rel="stylesheet" href="./style/general.css">
+        <link rel="stylesheet" href="./style/main.css">
+        <link rel="stylesheet" href="./style/footer.css">
+        <link rel="stylesheet" href="./style/modal.css">
+        <link rel="stylesheet" href="./style/tabletResponsive.css">
+        <link rel="stylesheet" href="./style/desktopResponsive.css">
+
         <title>PiraHub</title>
     </head>
     <body>
@@ -20,7 +28,7 @@
                             <div class="searchWriter">
                                 <input id="filter" type="text" placeholder="Pesquisar...">
                             </div>
-                            <div class="searchIconBox">
+                            <div id="searchButton" class="searchIconBox">
                                 <span class="searchIcon">
                                     <svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                                         <path 
@@ -83,6 +91,6 @@
                 <p>Pecege Logo</p>
             </div>
         </footer> -->
-        <script type='module' src="../javascript/app.js"></script>
+        <script type='module' src="./app.js"></script>
     </body>
 </html>
