--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./style/global.css">
-        <link rel="stylesheet" href="./style/header.css">
         <link rel="stylesheet" href="./style/general.css">
-        <link rel="stylesheet" href="./style/main.css">
+        <link rel="stylesheet" href="./style/header.css">
+        <link rel="stylesheet" href="./style/resultSection.css">
+        <link rel="stylesheet" href="./style/loader.css">
         <link rel="stylesheet" href="./style/footer.css">
         <link rel="stylesheet" href="./style/modal.css">
         <link rel="stylesheet" href="./style/tabletResponsive.css">
@@ -63,7 +64,7 @@
                             </div>
                             <div>
                                 <label>organização</label>
-                                <input type="radio" id="organization" name="userType" value="organization">
+                                <input type="radio" id="organization" name="userType" value="org">
 
                             </div>
                             <div>
@@ -75,6 +76,19 @@
                 </div>
             </section>
             <section id='resultSection' class="resultSection">
+                <div id='cardsSection' class="cardsSection">
+                </div>
+                <div id="loader" class="loader">
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
             </section>
         </main>
         <!-- <footer class="authorBox">
