--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="./style/resultSection.css">
         <link rel="stylesheet" href="./style/loader.css">
         <link rel="stylesheet" href="./style/footer.css">
-        <link rel="stylesheet" href="./style/modal.css">
+        <link rel="stylesheet" href="./style/userModal.css">
         <link rel="stylesheet" href="./style/tabletResponsive.css">
         <link rel="stylesheet" href="./style/desktopResponsive.css">
 
@@ -44,9 +44,11 @@
                         </div>
                     </div>
                     <div class="filter sortFilter">
-                        <button id="sortBy" class="filterButton">
-                            Ordenar por
-                        </button>
+                        <div class='filterButtonBox'>
+                            <button id="sortBy" class="filterButton">
+                                Ordenar por
+                            </button>
+                        </div>
                         <div id="sortBox" class="sortBox">
                             <div id="registerDate"><p>Data de cadastro</p></div>
                             <div id="followersNumber"><p>Número de seguidores</p></div>
@@ -88,6 +90,8 @@
                         <li></li>
                         <li></li>
                     </ul>
+                </div>
+                <div id="userModal">
                 </div>
             </section>
         </main>
