--- a/index.html
+++ b/index.html
@@ -92,23 +92,12 @@
                     </ul>
                 </div>
                 <div id="userModal">
+                    <div id="modalCard" class="userModalCard">
+
+                    </div>
                 </div>
             </section>
         </main>
-        <!-- <footer class="authorBox">
-            <div class="companyInfo">
-                <img src="./img/perfil.png"/>
-                <p>Ângelo Lanche</p>
-            </div>
-            <div class="companyInfo">
-                <img src="./img/perfil.png"/>
-                <p>Contato</p>
-            </div>
-            <div class="authorInfo">
-                <img src="img/perfil.png" />
-                <p>Pecege Logo</p>
-            </div>
-        </footer> -->
         <script type='module' src="./app.js"></script>
     </body>
 </html>
